// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderHandoffSchemaPrompt > renders a stable prompt fragment for step=code 1`] = `
"{
  "step": "code",
  "schema_version": 1,
  "filesModified": [                        // max 50
    { "path": <string>, "op": <"create" | "edit" | "delete"> },
    ...
  ],
  "decisions": [                            // max 10
    { "what": <string>, "why": <string> },
    ...
  ],
  "verificationCommands": [<string>, ...]   // max 10
  "knownLimitations": [<string>, ...]       // max 5
  "commitSha": <string, optional>
}"
`;

exports[`renderHandoffSchemaPrompt > renders a stable prompt fragment for step=fix 1`] = `
"{
  "step": "fix",
  "schema_version": 1,
  "filesModified": [                        // max 50
    { "path": <string>, "op": <"create" | "edit" | "delete"> },
    ...
  ],
  "decisions": [                            // max 10
    { "what": <string>, "why": <string> },
    ...
  ],
  "reviewItemsResolved": [<string>, ...]    // max 20
  "knownLimitations": [<string>, ...]       // max 5
}"
`;

exports[`renderHandoffSchemaPrompt > renders a stable prompt fragment for step=plan 1`] = `
"{
  "step": "plan",
  "schema_version": 1,
  "planSummary": <string, 1-2000 chars>,
  "affectedFiles": [<path string>, ...]     // max 30
  "acceptanceChecklist": [<string>, ...]    // max 15
  "unknowns": [<string>, ...]               // max 10
}"
`;

exports[`renderHandoffSchemaPrompt > renders a stable prompt fragment for step=review 1`] = `
"{
  "step": "review",
  "schema_version": 1,
  "verdict": <"pass" | "needs_fix" | "no_change">,
  "findings": [                             // max 20
    { "file": <string>, "severity": <"blocker" | "minor">, "note": <string> },
    ...
  ],
  "reviewedDiffSha": <string, required>
}"
`;

exports[`renderHandoffSchemaPrompt > renders a stable prompt fragment for step=test 1`] = `
"{
  "step": "test",
  "schema_version": 1,
  "result": <"pass" | "fail">,
  "failures": [                             // max 20
    { "test": <string>, "trace": <string ≤500 chars> },
    ...
  ],
  "flakyTests": [<string>, ...]             // max 10
}"
`;

exports[`renderHandoffSchemaPrompt > renders a stable prompt fragment for step=triage 1`] = `
"{
  "step": "triage",
  "schema_version": 1,
  "summary": <string, 1-2000 chars — what the issue is about>,
  "suggestedApproach": <string, 1-2000 chars — how to approach it>,
  "complexity": <"xs" | "s" | "m" | "l" | "xl">,
  "risks": [<string>, ...]                  // max 5
  "affectedAreas": [<string>, ...]          // max 10
}"
`;

exports[`renderTerminationBlock > renders a stable termination block for step=code 1`] = `
"## Termination protocol

When you finish the work for this state, record a short structured handoff so
the next step inherits your context. This is best-effort context — NOT a
completion gate, so it never blocks your real work.

1. Call \`forge_step_handoff.write\` with these scope fields (do not change them):

   \`\`\`json
   {
     "projectId": "p-1",
     "issueId": "i-1",
     "pipelineRunId": "r-1",
     "step": "code",
     "attempt": 1,
     "payload": <see schema below>
   }
   \`\`\`

2. Advance the pipeline state (MANDATORY — not best-effort). Call
   \`forge_issues.update\` to move the issue \`status\` to the next state in the
   Pipeline Rules ladder, even if your skill instructions did not mention a
   transition. On success move forward; on a blocking problem branch to
   \`reopen\` / \`needs_info\` / \`on_hold\` instead. An issue left in its current
   status stalls the pipeline forever — never skip this step.

3. Then respond with \`DONE\` on a new line as your final assistant text.

The handoff (step 1) is best-effort context: if its payload fails validation,
fix it and retry, but if you genuinely cannot produce a valid one, still do
step 2 and respond \`DONE\`. The status advance (step 2) is never optional.

Required JSON shape for the \`payload\` (step="code"):

\`\`\`json
{
  "step": "code",
  "schema_version": 1,
  "filesModified": [                        // max 50
    { "path": <string>, "op": <"create" | "edit" | "delete"> },
    ...
  ],
  "decisions": [                            // max 10
    { "what": <string>, "why": <string> },
    ...
  ],
  "verificationCommands": [<string>, ...]   // max 10
  "knownLimitations": [<string>, ...]       // max 5
  "commitSha": <string, optional>
}
\`\`\`

Rules:
- All fields above are REQUIRED unless marked optional.
- Array fields have a max length; do not exceed it.
- Enum fields must use one of the listed values exactly.
- Do NOT invent fields not listed above."
`;

exports[`renderTerminationBlock > renders a stable termination block for step=fix 1`] = `
"## Termination protocol

When you finish the work for this state, record a short structured handoff so
the next step inherits your context. This is best-effort context — NOT a
completion gate, so it never blocks your real work.

1. Call \`forge_step_handoff.write\` with these scope fields (do not change them):

   \`\`\`json
   {
     "projectId": "p-1",
     "issueId": "i-1",
     "pipelineRunId": "r-1",
     "step": "fix",
     "attempt": 1,
     "payload": <see schema below>
   }
   \`\`\`

2. Advance the pipeline state (MANDATORY — not best-effort). Call
   \`forge_issues.update\` to move the issue \`status\` to the next state in the
   Pipeline Rules ladder, even if your skill instructions did not mention a
   transition. On success move forward; on a blocking problem branch to
   \`reopen\` / \`needs_info\` / \`on_hold\` instead. An issue left in its current
   status stalls the pipeline forever — never skip this step.

3. Then respond with \`DONE\` on a new line as your final assistant text.

The handoff (step 1) is best-effort context: if its payload fails validation,
fix it and retry, but if you genuinely cannot produce a valid one, still do
step 2 and respond \`DONE\`. The status advance (step 2) is never optional.

Required JSON shape for the \`payload\` (step="fix"):

\`\`\`json
{
  "step": "fix",
  "schema_version": 1,
  "filesModified": [                        // max 50
    { "path": <string>, "op": <"create" | "edit" | "delete"> },
    ...
  ],
  "decisions": [                            // max 10
    { "what": <string>, "why": <string> },
    ...
  ],
  "reviewItemsResolved": [<string>, ...]    // max 20
  "knownLimitations": [<string>, ...]       // max 5
}
\`\`\`

Rules:
- All fields above are REQUIRED unless marked optional.
- Array fields have a max length; do not exceed it.
- Enum fields must use one of the listed values exactly.
- Do NOT invent fields not listed above."
`;

exports[`renderTerminationBlock > renders a stable termination block for step=plan 1`] = `
"## Termination protocol

When you finish the work for this state, record a short structured handoff so
the next step inherits your context. This is best-effort context — NOT a
completion gate, so it never blocks your real work.

1. Call \`forge_step_handoff.write\` with these scope fields (do not change them):

   \`\`\`json
   {
     "projectId": "p-1",
     "issueId": "i-1",
     "pipelineRunId": "r-1",
     "step": "plan",
     "attempt": 1,
     "payload": <see schema below>
   }
   \`\`\`

2. Advance the pipeline state (MANDATORY — not best-effort). Call
   \`forge_issues.update\` to move the issue \`status\` to the next state in the
   Pipeline Rules ladder, even if your skill instructions did not mention a
   transition. On success move forward; on a blocking problem branch to
   \`reopen\` / \`needs_info\` / \`on_hold\` instead. An issue left in its current
   status stalls the pipeline forever — never skip this step.

3. Then respond with \`DONE\` on a new line as your final assistant text.

The handoff (step 1) is best-effort context: if its payload fails validation,
fix it and retry, but if you genuinely cannot produce a valid one, still do
step 2 and respond \`DONE\`. The status advance (step 2) is never optional.

Required JSON shape for the \`payload\` (step="plan"):

\`\`\`json
{
  "step": "plan",
  "schema_version": 1,
  "planSummary": <string, 1-2000 chars>,
  "affectedFiles": [<path string>, ...]     // max 30
  "acceptanceChecklist": [<string>, ...]    // max 15
  "unknowns": [<string>, ...]               // max 10
}
\`\`\`

Rules:
- All fields above are REQUIRED unless marked optional.
- Array fields have a max length; do not exceed it.
- Enum fields must use one of the listed values exactly.
- Do NOT invent fields not listed above."
`;

exports[`renderTerminationBlock > renders a stable termination block for step=review 1`] = `
"## Termination protocol

When you finish the work for this state, record a short structured handoff so
the next step inherits your context. This is best-effort context — NOT a
completion gate, so it never blocks your real work.

1. Call \`forge_step_handoff.write\` with these scope fields (do not change them):

   \`\`\`json
   {
     "projectId": "p-1",
     "issueId": "i-1",
     "pipelineRunId": "r-1",
     "step": "review",
     "attempt": 1,
     "payload": <see schema below>
   }
   \`\`\`

2. Advance the pipeline state (MANDATORY — not best-effort). Call
   \`forge_issues.update\` to move the issue \`status\` to the next state in the
   Pipeline Rules ladder, even if your skill instructions did not mention a
   transition. On success move forward; on a blocking problem branch to
   \`reopen\` / \`needs_info\` / \`on_hold\` instead. An issue left in its current
   status stalls the pipeline forever — never skip this step.

3. Then respond with \`DONE\` on a new line as your final assistant text.

The handoff (step 1) is best-effort context: if its payload fails validation,
fix it and retry, but if you genuinely cannot produce a valid one, still do
step 2 and respond \`DONE\`. The status advance (step 2) is never optional.

Required JSON shape for the \`payload\` (step="review"):

\`\`\`json
{
  "step": "review",
  "schema_version": 1,
  "verdict": <"pass" | "needs_fix" | "no_change">,
  "findings": [                             // max 20
    { "file": <string>, "severity": <"blocker" | "minor">, "note": <string> },
    ...
  ],
  "reviewedDiffSha": <string, required>
}
\`\`\`

Rules:
- All fields above are REQUIRED unless marked optional.
- Array fields have a max length; do not exceed it.
- Enum fields must use one of the listed values exactly.
- Do NOT invent fields not listed above."
`;

exports[`renderTerminationBlock > renders a stable termination block for step=test 1`] = `
"## Termination protocol

When you finish the work for this state, record a short structured handoff so
the next step inherits your context. This is best-effort context — NOT a
completion gate, so it never blocks your real work.

1. Call \`forge_step_handoff.write\` with these scope fields (do not change them):

   \`\`\`json
   {
     "projectId": "p-1",
     "issueId": "i-1",
     "pipelineRunId": "r-1",
     "step": "test",
     "attempt": 1,
     "payload": <see schema below>
   }
   \`\`\`

2. Advance the pipeline state (MANDATORY — not best-effort). Call
   \`forge_issues.update\` to move the issue \`status\` to the next state in the
   Pipeline Rules ladder, even if your skill instructions did not mention a
   transition. On success move forward; on a blocking problem branch to
   \`reopen\` / \`needs_info\` / \`on_hold\` instead. An issue left in its current
   status stalls the pipeline forever — never skip this step.

3. Then respond with \`DONE\` on a new line as your final assistant text.

The handoff (step 1) is best-effort context: if its payload fails validation,
fix it and retry, but if you genuinely cannot produce a valid one, still do
step 2 and respond \`DONE\`. The status advance (step 2) is never optional.

Required JSON shape for the \`payload\` (step="test"):

\`\`\`json
{
  "step": "test",
  "schema_version": 1,
  "result": <"pass" | "fail">,
  "failures": [                             // max 20
    { "test": <string>, "trace": <string ≤500 chars> },
    ...
  ],
  "flakyTests": [<string>, ...]             // max 10
}
\`\`\`

Rules:
- All fields above are REQUIRED unless marked optional.
- Array fields have a max length; do not exceed it.
- Enum fields must use one of the listed values exactly.
- Do NOT invent fields not listed above."
`;

exports[`renderTerminationBlock > renders a stable termination block for step=triage 1`] = `
"## Termination protocol

When you finish the work for this state, record a short structured handoff so
the next step inherits your context. This is best-effort context — NOT a
completion gate, so it never blocks your real work.

1. Call \`forge_step_handoff.write\` with these scope fields (do not change them):

   \`\`\`json
   {
     "projectId": "p-1",
     "issueId": "i-1",
     "pipelineRunId": "r-1",
     "step": "triage",
     "attempt": 1,
     "payload": <see schema below>
   }
   \`\`\`

2. Advance the pipeline state (MANDATORY — not best-effort). Call
   \`forge_issues.update\` to move the issue \`status\` to the next state in the
   Pipeline Rules ladder, even if your skill instructions did not mention a
   transition. On success move forward; on a blocking problem branch to
   \`reopen\` / \`needs_info\` / \`on_hold\` instead. An issue left in its current
   status stalls the pipeline forever — never skip this step.

3. Then respond with \`DONE\` on a new line as your final assistant text.

The handoff (step 1) is best-effort context: if its payload fails validation,
fix it and retry, but if you genuinely cannot produce a valid one, still do
step 2 and respond \`DONE\`. The status advance (step 2) is never optional.

Required JSON shape for the \`payload\` (step="triage"):

\`\`\`json
{
  "step": "triage",
  "schema_version": 1,
  "summary": <string, 1-2000 chars — what the issue is about>,
  "suggestedApproach": <string, 1-2000 chars — how to approach it>,
  "complexity": <"xs" | "s" | "m" | "l" | "xl">,
  "risks": [<string>, ...]                  // max 5
  "affectedAreas": [<string>, ...]          // max 10
}
\`\`\`

Rules:
- All fields above are REQUIRED unless marked optional.
- Array fields have a max length; do not exceed it.
- Enum fields must use one of the listed values exactly.
- Do NOT invent fields not listed above."
`;
